# python-angular-mongo

./: .env.dist  README.md  compose.yml
core/: .coveragerc  .env.dist  .gitignore  README.md  config.py  main.py  pyproject.toml  worker.py
core/src/domain/author/: __init__.py  author.py  author_descriptor.py  author_repository.py
core/src/domain/book/: __init__.py  book.py  book_descriptor.py  book_detail.py  book_repository.py  book_sale.py
core/src/domain/borrow/: __init__.py  borrow.py  borrow_line.py  borrow_line_repository.py  borrow_repository.py
core/src/domain/bus/: __init__.py  domain_bus.py  domain_event.py  domain_route.py  handler.py  messenger.py  messenger_adapter.py  messenger_serializer.py
core/src/domain/common/: __init__.py  address.py  enterprise_contact.py
core/src/domain/customer/: __init__.py  contact_info.py  customer.py  customer_descriptor.py  customer_repository.py  membership.py
core/src/domain/editorial/: __init__.py  editorial.py  editorial_descriptor.py  editorial_repository.py
core/src/domain/identity/: __init__.py  collection.py  entity.py  identity.py  list_repository.py  stored_repository.py
core/src/domain/provider/: __init__.py  provider.py  provider_descriptor.py  provider_repository.py
core/src/domain/purchase/: __init__.py  purchase.py  purchase_invoice.py  purchase_line.py  purchase_line_repository.py  purchase_repository.py
core/src/domain/sale/: __init__.py  sale.py  sale_invoice.py  sale_line.py  sale_line_repository.py  sale_repository.py
core/tests/fixtures/: __init__.py  fixture_payload.py  ref.py
(+748 files in other folders)
