[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[all,standard]>=0.135.1",
    "langchain-core>=1.2.23",
    "langchain-openai>=1.1.12",
    "pika>=1.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "starlette>=1.0.0",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/main.py",
    "*/config.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
omit = [
    "tests/*",
    "*/__pycache__/*",
]
exclude_also = [
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "pragma: no cover",
]
